# diamond-fish-tracker

./: .gitignore  CMakeLists.txt  imgui.ini
.claude/: settings.local.json
src/: main.cpp
src/audio/: SFX.h
src/core/: InputEvent.h
src/game/: Color.h  Diamond.h  Fish.h  GameRound.h  ResultScreen.h  Sprites.h
src/gesture/: GestureEngine.h
src/render/: Renderer.h  TextRenderer.h
